# StreamingPlayer

./: CMakeLists.txt  main.cpp
include/: CMakeLists.txt  CreateCustomFormatDialog.h  Feed.h  FeedWidget.h  GStreamerPipeline.h  GStreamerWidget.h  GenericUrlOpener.h  GenericVideoProvider.h  PlayerDock.h  PlayerTab.h  SearchProvider.h  StreamingPlayer.h  ThumbnailRetriver.h  Tile.h  UrlOpener.h  VideoProvider.h  YoutubeChannelUrlOpener.h  YoutubeFeed.h  YoutubeManager.h  YoutubeParser.h  YoutubeSearchProvider.h  YoutubeVideoProvider.h  YoutubeVideoUrlOpener.h
res/: CMakeLists.txt  Resources.qrc
src/: CMakeLists.txt  CreateCustomFormatDialog.cpp  FeedWidget.cpp  FlowLayout.cpp  GStreamerPipeline.cpp  GStreamerWidget.cpp  GenericUrlOpener.cpp  PlayerDock.cpp  PlayerTab.cpp  StreamingPlayer.cpp  ThumbnailRetriver.cpp  Tile.cpp  YoutubeChannelUrlOpener.cpp  YoutubeManager.cpp  YoutubeParser.cpp  YoutubeSearchProvider.cpp  YoutubeVideoProvider.cpp  YoutubeVideoUrlOpener.cpp
ui/: CMakeLists.txt  ChannelTile.ui  CommentTile.ui  CreateCustomFormatDialog.ui  DescriptionDock.ui  HistoryDock.ui  MainWindow.ui  ReleatedDock.ui  SearchDock.ui  UploadDock.ui  VideoPlayer.ui  VideoTile.ui  WatchLaterDock.ui
